# Audio-Transcription

./: README.md  pyproject.toml
app/: config.py  main.py  router.py  transcriber.py
