[project]
name = "transcription-poc"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "whisperx",
    "pyannote.audio",
    "python-multipart",
    "torch==2.0.1+cu118",
    "torchaudio==2.0.2+cu118",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu118" }]
torchaudio = [{ index = "pytorch-cu118" }]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
