[project]
name = "transcription-poc"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "whisperx",
    "pyannote.audio",
    "python-multipart",
    "torch==2.3.1+cu121",
    "torchaudio==2.3.1+cu121",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu121" }]
torchaudio = [{ index = "pytorch-cu121" }]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true