[project]
name = "transcription-poc"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "setuptools",
    "torch==2.3.1+cu121",
    "torchaudio==2.3.1+cu121",
    "pyannote.audio==3.1.1",
    "pytorch-lightning==2.1.4",
    "lightning-fabric==2.1.4",
    "faster-whisper==1.0.3",
    "ctranslate2>=4.0.0",
    "numpy>=1.24.0,<2.0.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu121" }]
torchaudio = [{ index = "pytorch-cu121" }]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
priority = "explicit"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
priority = "supplemental"